feat: add course page and general page

--- a/source/pug/components/_header.pug
+++ b/source/pug/components/_header.pug
@@ -16,38 +16,41 @@
 
 header.header
   .header-container.container
-    .header__row.header__row-1
+    .header__left
       a(href="").header-logo
-        img(src="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png" srcset="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png 1x, https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png 2x" width="572" height="119" style="max-height:119px;height:auto;" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="https://cnpp.ru/wp-content/uploads/2020/09/osnovnoj-gorizontalnyj-min-1-e1599583381728.png").header-logo__link
-      .header__menu.header-main__menu.e_menu
-        div
-    nav.header__row.header__row-2.hd
-      ul.menu
-        li.menu-item.menu__item
-          a(href="") О центре
-        li.menu-item.menu__item
-          a(href="") Специалисты
-        li.menu-item.menu__item
-          a(href="") Расстройства
-        li.menu-item.menu__item.menu-item-has-children
-          a(href="") Клиенту
-          ul.sub-menu
-            li.menu-item
-              a(href="") Правила получения услуг
-            li.menu-item
-              a(href="") Навыки DBT
-            li.menu-item
-              a(href="") Семейные связи
-            li.menu-item
-              a(href="") Комплексный курс DBT
-            li.menu-item
-              a(href="") Курс Skills for life
-        li.menu-item.menu__item
-          a(href="") Услуги
-        li.menu-item.menu__item.btn-menu
-          a(href="") Запись на прием
-        li.menu-item.menu__item
-          a(href="") Мой профиль
+        img(src="./assets/img/logo.svg" alt="Центр научно-практической психологии Dialectica" data-retina_logo_url="./assets/img/logo.svg").header-logo__link
+    .header__center
+      nav.header-menu
+        ul.menu
+          li.menu-item.menu__item
+            a(href="") О центре
+          li.menu-item.menu__item
+            a(href="") Специалисты
+          li.menu-item.menu__item
+            a(href="") Расстройства
+          li.menu-item.menu__item.menu-item-has-children
+            a(href="") Клиенту
+            ul.sub-menu
+              li.menu-item
+                a(href="") Правила получения услуг
+              li.menu-item
+                a(href="") Навыки DBT
+              li.menu-item
+                a(href="") Семейные связи
+              li.menu-item
+                a(href="") Комплексный курс DBT
+              li.menu-item
+                a(href="") Курс Skills for life
+          li.menu-item.menu__item
+            a(href="") Услуги
+    .header__right
+        a(href="").btn.header__btn Запись на прием
+        a(href="").menu-icon
+    .header__menu.e_menu
+      div
+
+
+
 
 
 
