--- a/source/pug/components/_item.pug
+++ b/source/pug/components/_item.pug
@@ -1,14 +1,15 @@
 a(href="").item
-  img(src="../assets/img/item-1.png", alt="").item__img
+  img(src="./assets/img/item-1.png", alt="").item__img
   .item__info
     .item__title СЕРГЕЙ СТАРОВЕРОВ
     .item__subtitle Клинический психолог
     .item__text
-      p
-        ul
-          li Терапия принятия и ответственности (АСТ)
-          li Когнитивно-поведенческая терапия (CBT)
-          li Терапия, сфокусированная на сострадании (CFT)
-      p
-        span.info-title Специализация:
-        .info-text Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.
+      div
+        ul.list
+          li.list__item Терапия принятия и ответственности (АСТ)
+          li.list__item Когнитивно-поведенческая терапия (CBT)
+          li.list__item Терапия, сфокусированная на сострадании (CFT)
+      div
+        .title-note Специализация:
+        div Депрессия, тревожные расстройства (социальная тревога, ПТСР, ГТР, панические атаки), РПП, БАР, СДВГ.
+      .btn.item__btn подробнее
