--- a/source/pug/content/main-screen-1.pug
+++ b/source/pug/content/main-screen-1.pug
@@ -1,21 +1,25 @@
 .container
   .main-1__col.main-1__col-1
-    h1.title.title-h1.main-1__title Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам
-    h2.title.title-h2.main-1__subtitle Мы используем методы с научно доказанной эффективностью
+    h1.main-1__title Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам
+    .main-1__subtitle Мы используем методы с научно доказанной эффективностью
+    a(href="").main-1__big-btn.white-btn Выбрать специалиста
     .main-1__btns
-      a(href="").main-1__btn.btn Выбрать специалиста
-      a(href="").main-1__btn.btn Запись в группу DBT
-      a(href="").main-1__btn.btn Запись на курс Skills for life
+      a(href="").main-1__btn.main-btn Набор в группу DBT
+      a(href="").main-1__btn.main-btn Запись на курс Skills for life
   .main-1__col.main-1__col-2
     .main-1__block
       .main-1__sub
         img(src="./assets/img/clock.svg", alt="")
-        span ЧАСЫ РАБОТЫ
+        span часы работы
       .main-1__text Время Новосибирское
       .main-1__line
       .main-1__table
-        .main-1__cl Понедельник - пятница <br> 10:00 — 19:00
-        .main-1__cl Суббота <br> 10:00 — 15:00
+        .main-1__tr
+          .main-1__cl.main-1__cl-left Понедельник — Пятница
+          .main-1__cl.main-1__cl-right 10:00 — 19:00
+        .main-1__tr
+          .main-1__cl.main-1__cl-left Суббота
+          .main-1__cl.main-1__cl-right 10:00 — 15:00
       .main-1__line
       a(href="tel:+79959653003").main-1__link
         <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
