--- a/source/pug/content/main-screen-3.pug
+++ b/source/pug/content/main-screen-3.pug
@@ -1,6 +1,8 @@
-.main-2.container
-  h2.main-2__title.title.title-h2 Наши специалисты
-  .main-2__text.description Клинические психологи и психотерапевты с высшим медицинским образованием. Наша команда специалистов каждую неделю совершенствует свои навыки и тактику ведения клиентов. Мы работаем при поддержке Ассоциации когнитивно — бихевиоральных терапевтов и Института Behavioral Tech (Сиэтл, США).
-  .main-2__grid
-    - for (var i = 0; i < 10; ++i)
-        include .././components/_item
+.main-3
+  .container
+    h2.main-3__title.title.title-h2 Наши специалисты
+    .main-3__text.description Клинические психологи и психотерапевты с высшим медицинским образованием. Наша команда специалистов каждую неделю совершенствует свои навыки и тактику ведения клиентов. Мы работаем при поддержке Ассоциации когнитивно — бихевиоральных терапевтов и Института Behavioral Tech (Сиэтл, США).
+    .main-3__grid.items-grid
+      - for (var i = 0; i < 4; ++i)
+          include .././components/_item
+    a(href="").main-3__btn.btn Все специалисты
