--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -25,5 +25,7 @@
         a(href="specialist.html") Специалист
       li
         a(href="rules.html") Правила получения услуг
+      li
+        a(href="course.html") Skills for life
 </body>
 </html>
