--- a/source/sass/abstracts/_variables.sass
+++ b/source/sass/abstracts/_variables.sass
@@ -14,14 +14,14 @@ $color_text_1: #878787
 $color_text_2: #333
 $color_btn: #fff
 $bg_dark: #4a707a
-$bg_translucent: rgba(255, 255, 255, 0.3)
+$bg_translucent: rgba(255, 255, 255, 0.25)
 $border_color: #dddddd
 $bg_grey: #f6f6f6
 
-$color_card: #fafafa
-$color_card_hover: #fff
+$color_card: #fff
 
 $size_text: 16px
+$size_text_mob: 14px
 $lh_text: 1.3
 
 $transition: 0.3s
