--- a/source/sass/layout/_footer.sass
+++ b/source/sass/layout/_footer.sass
@@ -38,7 +38,7 @@
       line-height: 1.8
       color: $color_primary
       transition: $transition
-    & li:not(.btn-menu)
+    & li
       &:hover
         & a
           color: $color_primary_light
