--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -29,6 +29,7 @@
 @import "pages/about";
 @import "pages/departments";
 @import "pages/specialist";
+@import "pages/course";
 
 //Vendors
 @import "vendors/swiper.min";
