--- a/source/pug/content/about-screen-1.pug
+++ b/source/pug/content/about-screen-1.pug
@@ -2,5 +2,5 @@
   .first-template__block
     h1.title.title-h1.first-template__title Центр 
       span DIALECTICA
-    h2.title.title-h2.first-template__subtitle Создайте жизнь, которую стоит прожить
+    .title.title-h2.first-template__subtitle Создайте жизнь, которую стоит прожить
     a(href="").btn.first-template__btn Записаться на прием
