--- a/source/pug/main.pug
+++ b/source/pug/main.pug
@@ -15,12 +15,12 @@
       include content/main-screen-1
     section.section
       include content/main-screen-2
-    section.section
+    section
+      include content/departments-screen
+    section
       include content/main-screen-3
     section.section
       include content/main-screen-4
-    section.section
-      include content/main-screen-5
     include components/_form
 
     include components/_footer
