--- a/source/sass/pages/_about.sass
+++ b/source/sass/pages/_about.sass
@@ -1,5 +1,9 @@
 .about-1
-  background-image: url(https://cnpp.ru/wp-content/uploads/2019/03/-%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B5-e1553274224907.jpg)
+  +bg
+  background-image: linear-gradient(0deg, rgba(74, 112, 122, 0.6), rgba(74, 112, 122, 0.6)), url(../img/about-bg.png)
+  background-position: center
+  @media (max-width: 767px)
+    background-position: left
 
 .about-2
   &__row
@@ -30,11 +34,13 @@
         padding: 30px 0!important
     &-2
       @media (max-width: 991px)
-        margin: 0 -20px
+        margin: 0 -30px
         & img
           width: 100%
           height: auto
           object-fit: cover
+      @media (max-width: 767px)
+        margin: 0 -15px
   &__title
     color: $color_primary_dark
     margin-bottom: 20px
@@ -51,6 +57,7 @@
   color: #fff
   @media (max-width: 991px)
     flex-direction: column
+    margin-top: -50px
   &__item
     flex: 0 1 25%
     +center
