--- a/source/sass/pages/_disorder.sass
+++ b/source/sass/pages/_disorder.sass
@@ -12,7 +12,7 @@
   &__card
     @media (max-width: 767px)
       max-width: 320px
-      font-size: 14px
+      font-size: $size_text_mob
       padding: 10px
       border: 1px solid $border_color
   &__note
