--- a/source/sass/pages/_main.sass
+++ b/source/sass/pages/_main.sass
@@ -1,64 +1,215 @@
 .main-1
-  height: 100vh
-  padding-top: 200px
-  padding-bottom: 80px
+  padding: 115px 0
   color: #fff
-  background: url(../img/bg-first.png), linear-gradient(90deg, #407482 50.52%, rgba(64, 116, 130, 0) 100%)
   +bg
+  background-image: url(../img/bg-first.png)
+  background-position: center
+  @media (max-width: 1024px)
+    padding: 50px 0
+    background-position: 34%
+  @media (max-width: 680px)
+    background-position: left
   @media (max-width: 767px)
-    padding-top: 40px
-    padding-bottom: 40px
+    padding: 40px 0
   & .container
     display: flex
     flex-wrap: nowrap
-    @media (max-width: 767px)
+    justify-content: space-between
+    max-width: 1280px
+    @media (max-width: 1024px)
       flex-direction: column
       flex-wrap: wrap
   &__title
-    max-width: 820px
+    font-size: 40px
+    line-height: 1.18
+    max-width: 520px
+    margin-top: 10px
+    @media (max-width: 1024px)
+      margin-top: 0
+    @media (max-width: 539px)
+      font-size: 26px
   &__subtitle
-    color: #fff!important
-  &__col
-    &-1
-      width: 0 1 60%
+    max-width: 425px
+    font-size: 24px
+    line-height: 1.17
+    color: #fff
+    margin-bottom: 60px
+    @media (max-width: 1170px)
+      font-size: 20px
+    @media (max-width: 1024px)
+      margin-bottom: 40px
+    @media (max-width: 539px)
+      font-size: 18px
   &__btns
     display: flex
-    flex-direction: column
     gap: 20px
+    @media ((max-width: 1100px) and (min-width: 1024px))
+      gap: 15px
+    @media (max-width: 539px)
+      flex-direction: column
+      gap: 5px
   &__block
+    font-size: 24px
+    line-height: 1.17
     background: $bg_translucent
-    padding: 50px 30px
+    padding: 30px 30px 50px
     text-align: center
+    @media (max-width: 1170px)
+      font-size: 20px
+      max-width: 430px
+      margin: 0 auto
+    @media (max-width: 1024px)
+      padding: 30px
+    @media (max-width: 539px)
+      padding: 20px
+      font-size: 16px
+      max-width: 300px
+  &__col
+    &-1
+      @media (max-width: 1024px)
+        margin-bottom: 40px
   &__sub
     display: flex
     justify-content: center
-    gap: 5px
+    gap: 10px
+    text-transform: uppercase
     margin-bottom: 10px
     & img
       width: 16px
       height: auto
       object-fit: cover
   &__table
-    margin: 20px 0
-    padding: 15px 0
-  &__cl
-    margin-bottom: 10px
-    text-align: center
+    margin: 45px 0
+    @media (max-width: 1024px)
+      margin: 40px 0
+    @media (max-width: 539px)
+      margin: 25px 0
+      font-size: $size_text_mob
+  &__text
+    margin-bottom: 20px
+    @media (max-width: 539px)
+      margin-bottom: 15px
+  &__tr
+    display: flex
+    justify-content: space-between
+    align-items: flex-start
+    gap: 45px
+    margin-bottom: 50px
+    @media (max-width: 1024px)
+      margin-bottom: 30px
+    @media (max-width: 539px)
+      gap: 20px
+      margin-bottom: 17px
     &:last-child
       margin-bottom: 0
+  &__cl
+    &-left
+      text-align: left
+      max-width: 195px
+      @media (max-width: 1024px)
+        max-width: 130px
+    &-right
+      text-align: right
   &__link
     +center
-    font-size: 18px
-    gap: 5px
+    margin-top: 20px
+    gap: 8px
+    @media (max-width: 539px)
+      margin-top: 15px
   &__line
     width: 176px
     height: 1px
+    margin: 0 auto
     background: #fff
+  &__big-btn
+    margin-bottom: 30px
+    @media (max-width: 539px)
+      margin-bottom: 15px
+  &__btn
+    @media ((max-width: 1100px) and (min-width: 1024px))
+      padding: 12px 18px
 
 .main-2
-  &.container
-    max-width: 1280px
+  &__right
+    color: $color_primary_light
+    font-size: 40px
+    line-height: 1.17
+    text-align: right
+    @media (max-width: 991px)
+      font-size: 28px
+    @media (max-width: 767px)
+      margin-bottom: 20px
+      font-size: 24px
   &__grid
     display: grid
-    grid-template-columns: repeat(2, 1fr)
-    gap: 40px
+    grid-template-columns: repeat(4, 1fr)
+    gap: 60px
+    @media (max-width: 991px)
+      grid-template-columns: repeat(2, 1fr)
+    @media (max-width: 767px)
+      grid-template-columns: repeat(1, 1fr)
+      gap: 35px
+  &__title
+    text-transform: uppercase
+    margin-bottom: 8px
+    color: $color_primary_light
+  &__text
+    font-size: 14px
+    @media (max-width: 767px)
+      max-width: 400px
+      margin: 0 auto
+  &__icon
+    margin: 0 0 25px
+    @media (max-width: 767px)
+      max-width: 70px
+      margin: 0 auto 20px
+  &__item
+    @media (max-width: 767px)
+      text-align: center
+
+.main-2, .departments
+  &__row
+    display: flex
+    justify-content: space-between
+    margin-bottom: 50px
+    @media (max-width: 767px)
+      flex-direction: column
+      margin-bottom: 40px
+      & .main-2__left, & .departments__left
+        order: 2
+      & .main-2__right, & .departments__right
+        order: 1
+        text-align: left
+  &__left
+    max-width: 50%
+    @media (max-width: 767px)
+      max-width: 100%
+
+.main-3
+  padding: 175px 0 50px
+  background: $bg_grey
+  @media (max-width: 767px)
+    padding: 40px 0
+  &.container
+    max-width: 1280px
+  &__text
+    margin-bottom: 50px
+    @media (max-width: 767px)
+      margin-bottom: 35px
+  &__btn
+    margin: 50px auto 0
+    @media (max-width: 767px)
+      margin: 35px auto 0
+
+.main-4
+  &__slider
+    overflow: hidden
+  &__img
+    margin-bottom: 20px
+  &__subtitle
+    font-size: 18px
+    color: $color_primary_dark
+    margin-bottom: 10px
+  &__text
+    margin-bottom: 20px
+
