--- a/assets/img/css/sprite.css
+++ b/assets/img/css/sprite.css
@@ -1,5 +1,5 @@
 .svg-arrow {
-	background: url("svg/sprite.css-82e5e6fc.svg") 85.71428571428571% 44.44444444444444% no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 98.92328398384926% 60.17964071856287% no-repeat;
 }
 
 .svg-arrow-dims {
@@ -8,7 +8,7 @@
 }
 
 .svg-clock {
-	background: url("svg/sprite.css-82e5e6fc.svg") 55.55555555555556% 0 no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 99.19028340080972% 47.96238244514107% no-repeat;
 }
 
 .svg-clock-dims {
@@ -16,8 +16,53 @@
 	height: 24px;
 }
 
+.svg-departments {
+	background: url("svg/sprite.css-cdcc64d4.svg") 0 100% no-repeat;
+}
+
+.svg-departments-dims {
+	width: 190px;
+	height: 190px;
+}
+
+.svg-heart {
+	background: url("svg/sprite.css-cdcc64d4.svg") 96.5166908563135% 54.642857142857146% no-repeat;
+}
+
+.svg-heart-dims {
+	width: 70px;
+	height: 63px;
+}
+
+.svg-logo {
+	background: url("svg/sprite.css-cdcc64d4.svg") 0 0 no-repeat;
+}
+
+.svg-logo-dims {
+	width: 759px;
+	height: 153px;
+}
+
+.svg-profile {
+	background: url("svg/sprite.css-cdcc64d4.svg") 81.48148148148148% 69.64856230031948% no-repeat;
+}
+
+.svg-profile-dims {
+	width: 30px;
+	height: 30px;
+}
+
+.svg-stomach {
+	background: url("svg/sprite.css-cdcc64d4.svg") 86.33720930232558% 55.03597122302158% no-repeat;
+}
+
+.svg-stomach-dims {
+	width: 71px;
+	height: 65px;
+}
+
 .svg-telegram {
-	background: url("svg/sprite.css-82e5e6fc.svg") 0 100% no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 25.815217391304348% 86.29283489096574% no-repeat;
 }
 
 .svg-telegram-dims {
@@ -26,7 +71,7 @@
 }
 
 .svg-vk {
-	background: url("svg/sprite.css-82e5e6fc.svg") 0 0 no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 85.59670781893004% 67.49226006191951% no-repeat;
 }
 
 .svg-vk-dims {
@@ -34,8 +79,44 @@
 	height: 20px;
 }
 
+.svg-welcome-1 {
+	background: url("svg/sprite.css-cdcc64d4.svg") 59.78755690440061% 62.96296296296296% no-repeat;
+}
+
+.svg-welcome-1-dims {
+	width: 100px;
+	height: 100px;
+}
+
+.svg-welcome-2 {
+	background: url("svg/sprite.css-cdcc64d4.svg") 44.52887537993921% 63.22314049586777% no-repeat;
+}
+
+.svg-welcome-2-dims {
+	width: 101px;
+	height: 101px;
+}
+
+.svg-welcome-3 {
+	background: url("svg/sprite.css-cdcc64d4.svg") 28.963414634146343% 63.75% no-repeat;
+}
+
+.svg-welcome-3-dims {
+	width: 103px;
+	height: 103px;
+}
+
+.svg-welcome-4 {
+	background: url("svg/sprite.css-cdcc64d4.svg") 74.96206373292868% 62.96296296296296% no-repeat;
+}
+
+.svg-welcome-4-dims {
+	width: 100px;
+	height: 100px;
+}
+
 .svg-whatsapp {
-	background: url("svg/sprite.css-82e5e6fc.svg") 100% 0 no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 100% 55.4858934169279% no-repeat;
 }
 
 .svg-whatsapp-dims {
@@ -44,7 +125,7 @@
 }
 
 .svg-youtube {
-	background: url("svg/sprite.css-82e5e6fc.svg") 0 47.61904761904762% no-repeat;
+	background: url("svg/sprite.css-cdcc64d4.svg") 25.956284153005466% 79.5031055900621% no-repeat;
 }
 
 .svg-youtube-dims {
