--- a/source/pug/content/specialist-screen.pug
+++ b/source/pug/content/specialist-screen.pug
@@ -1,11 +1,20 @@
 .container.specialist
   .specialist__row
-    .specialist__col
+    .specialist__col-1
       h1.title.title-h1 Сергей Сергеевич Староверов
       h2.title.title-h2 Клинический психолог, DBT - терапевт
       img(src="https://i0.wp.com/cnpp.ru/wp-content/uploads/2020/05/sergej-e1588702294171.png?resize=402%2C600&ssl=1", alt="").specialist__img.hide-desktop
       .attention Я столкнулся с тем, что на отечественном рынке психотерапевтических услуг практически отсутствует эффективная помощь при тяжелых поведенческих нарушениях. Тогда, в 2017 году, мы с коллегой, врачом-психотерапевтом, <a href="" class="text-link">Николаем Головахой</a> твёрдо решили: «Пора что-то делать в Томске!». Сейчас Центр научно-практической психологии Dialectica успешно работает в нашем регионе и по всему Миру. Мы организовали рабочее пространство для клинических психологов и психотерапевтов, в котором каждый специалист использует инструменты только с доказанной эффективностью и изучает передовые методы оказания помощи.
-    .specialist__col
+      .specialist__socials.socials
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="./assets/img/youtube.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="./assets/img/vk.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="./assets/img/whatsapp.svg", alt="YouTube").socials__icon
+        a(href="https://www.youtube.com/channel/UC9O-RlVMSnHv5o2kL5QciIw" target="_blank").socials__link
+          img(src="./assets/img/telegram.svg", alt="YouTube").socials__icon
+    .specialist__col-2
       img(src="https://i0.wp.com/cnpp.ru/wp-content/uploads/2020/05/sergej-e1588702294171.png?resize=402%2C600&ssl=1", alt="").specialist__img
   .specialist__text.note
     p
@@ -35,5 +44,6 @@
         li.list__item Психотерапия стрессовых состояний
         li.list__item Работа с агрессивностью и конфликтным поведением
         li.list__item Психологическое консультирование
+
 
 
