--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -24,6 +24,8 @@
       li
         a(href="specialist.html") Специалист
       li
+        a(href="specialists.html") Специалисты центра
+      li
         a(href="rules.html") Правила получения услуг
       li
         a(href="course.html") Skills for life
