--- a/source/sass/abstracts/_general-style.sass
+++ b/source/sass/abstracts/_general-style.sass
@@ -234,7 +234,7 @@ textarea
   margin-bottom: 10px
 
 //socials in footer and share btn
-.footer-socials, .disorder__socials
+.footer-socials, .disorder__socials, .specialist__socials
   gap: 10px
   & .socials
     &__link
