--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -30,6 +30,7 @@
 @import "pages/departments";
 @import "pages/specialist";
 @import "pages/course";
+@import "pages/page";
 
 //Vendors
 @import "vendors/swiper.min";
