--- a/source/sass/pages/_specialist.sass
+++ b/source/sass/pages/_specialist.sass
@@ -3,13 +3,32 @@
   &__row
     display: flex
     gap: 40px
-    margin-bottom: 30px
-  &__col
-    flex: 0 1 50%
+    margin-bottom: 40px
+  &__img
     @media (max-width: 767px)
-      flex: 0 1 100%
-    &:last-child
+      max-width: 350px
+      width: 100%
+      height: auto
+      margin: 0 auto
+  & .title-h1
+    @media (max-width: 991px)
+      font-size: 36px
+      margin-bottom: 12px
+    @media (max-width: 767px)
+      font-size: 30px
+  & .title-h2
+    @media (max-width: 767px)
+      font-size: 20px
+  &__col
+    &-1
+      flex: 0 1 70%
+    &-2
+      flex: 0 1 30%
       @media (max-width: 767px)
         display: none
+    &-1, &-2
+      @media (max-width: 767px)
+        flex: 0 1 100%
+    &:last-child
       & .specialist__img
         margin: 0 0 0 auto
